[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { git = "https://github.com/serde-rs/serde.git", tag = "v1.0.198" }
quote = { git = "https://github.com/dtolnay/quote.git" }
anyhow = { git = "https://github.com/dtolnay/anyhow.git", branch = "master" }